# rustfall2024

AssignmentFolder/FinalProject/final_project/: Cargo.toml
AssignmentFolder/FinalProject/final_project/src/: lib.rs  main.rs  site_status_check.rs
AssignmentFolder/FinalProject/final_project/tests/: integration_tests.rs
AssignmentFolder/RustTesting/bank_assignment/: Cargo.toml
AssignmentFolder/RustTesting/bank_assignment/src/: bank_account.rs  main.rs
AssignmentFolder/SimpleConcurrency/simpleConcurrency/: Cargo.toml
AssignmentFolder/SimpleConcurrency/simpleConcurrency/src/: main.rs
AssignmentFolder/financial_data_fetcher/: Cargo.toml  bitcoin_prices.txt  ethereum_prices.txt  sp500_prices.txt
AssignmentFolder/financial_data_fetcher/src/: main.rs
AssignmentFolder/guessGame/src/: main.rs
AssignmentFolder/numberAnalyzerAssignment/: Cargo.toml
AssignmentFolder/numberAnalyzerAssignment/src/: main.rs
AssignmentFolder/tempAssignment/: Cargo.toml
AssignmentFolder/tempAssignment/src/: main.rs
dog_api_example/src/: main.rs
hello_world/: user_info.txt
hello_world/src/: main.rs
