[package]
name = "final_project"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
ureq = "2.6.0"

[[bin]]
name = "final_project"
path = "src/main.rs"

[lib]
name = "final_project"
path = "src/lib.rs"

